--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "curdpoc",
+  "name": "ag-grid",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,7 +19,8 @@
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
-    "ngx-pagination": "^5.0.0",
+    "ag-grid-angular": "^24.0.0",
+    "ag-grid-community": "^24.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
